updated meta title, meta desc and fixed heading spacing

--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -48,7 +48,7 @@
     text-transform: uppercase;
     text-shadow: 1px 1px 1px #000;
     span {
-      margin-left: 1rem;
+      margin-left: 0rem;
       font-size: 2.8rem;
     }
   }
